--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<a href="http://useless-space.hol.es/plumtr.php">plumtr</>
+<a href="http://useless-space.hol.es/plumtr.php">plumtr</a>
+
+<form method="post" action="http://useless-space.hol.es/plumtr.php">
+
+  <input type="text" name="pass">
+  <button type="submit">send</button>  
+</form>
+
+if js - get - take from url or setsession + redirect
+  
+  
+  
+  
+  
+  
