--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<script>
+var logged = 'no';
+  
+  if(localStorage.getItem('go')==='yes'){
+  logged = 'yes';
+    console.log(logged);
+}
+  console.log(window.location.pathname);
+  
+  
+
+</script>
+
+
+
 <a href="http://useless-space.hol.es/plumtr.php">plumtr</a>
 
 <form method="post" action="http://useless-space.hol.es/plumtr.php">
