--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ var logged = 'no';
   logged = 'yes';
     console.log(logged);
 }
-  console.log(window.location.pathname);
+  console.log(window.location.href);
   
   
 
