--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <script>
-var logged = 'no';
+
+  console.log(window.location.search);
+  var logged = 'no';
   
   if(localStorage.getItem('go')==='yes'){
   logged = 'yes';
