--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
   if(localStorage.getItem('go')==='yes'){
   logged = 'yes';
-    console.log(logged);
+   // console.log(logged);
 }
   if(window.location.href.indexOf('?go=yes') !== -1){
     logged = 'yes';
@@ -13,7 +13,7 @@
     localStorage.name = 'My Name';
     
     localStorage['nums'] = 1234;
-    console.log(logged);
+   // console.log(logged);
   }
   
   function logout(){
