--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 
 </script>
 
-<h1><a  href="javascript:void(0)" onclick="logout();">logout</a></h1>
+<!--h1><a  href="javascript:void(0)" onclick="logout();">logout</a></h1-->
+
+<h1><a  href="http://useless-space.hol.es/plumtr.php?logout=true" onclick="logout();">logout</a></h1>
+
+
 
 <a href="http://useless-space.hol.es/plumtr.php">plumtr</a>
 
