--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   if(decodeURIComponent(window.location.search).split('&').length){
   
-    var arr = if(decodeURIComponent(window.location.search).split('&').length);
+    var arr = (decodeURIComponent(window.location.search).split('&').length);
     localStorage.arr = arr;
     //set use in html on page append or 
     //set variables by for lop
