--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     //then
     
     //redirect again home page and if logged it goes to dashboard and url is clear
-    //window.location.href = 'https://i-do-wordpress.github.io/plumtr/';
+    window.location.href = 'https://i-do-wordpress.github.io/plumtr/';
   }
   
   
