--- a/wp-content/themes/plumtr/viewsAngular/home.html
+++ b/wp-content/themes/plumtr/viewsAngular/home.html
@@ -3,6 +3,9 @@
 <div ng-include src="CR.getPartial('view.searchBar.html')"></div>
 
 
+<div ng-include src="CR.getPartial('view.catsCheckboxBar.html')"></div>
+
+
 <div ng-include src="CR.getPartial('view.tiles.html')"></div>
 
 
